...
  Future<void> linkWithSocial(SocialLoginType type) async {
    try {
      isLoading = true;
      clearError();
      await _authService.linkWithSocial(type);
      Get.back();
      AppUtil.showSuccessSnackbar('완료', '계정이 연결되었습니다');
    } on AuthException catch (e) {
      _showError(e.message);
    } catch (e) {
      _showError('계정 연결에 실패했습니다');
    } finally {
      isLoading = false;
...
