...
      padding: const EdgeInsets.symmetric(
        horizontal: AppSpacing.headerHorizontalPadding,
      ),
      child: Column(
        children: [
          PlanetTextCell(
            text: '개인정보처리방침',
            color: linkColor,
            onTap: () => controller.openPrivacyPolicy(),
          ),
          PlanetTextCell(
            text: '서비스 이용약관',
            color: linkColor,
            onTap: () => controller.openTermsOfService(),
          ),
        ],
      ),
    );
...
